test/good/good.insufficient-type-info-none.sam
// ERROR_COUNT: 0

class Option<T>(Some(T), None(bool)) {
  function <T> none(): Option<T> = None(true)
  method toSome(t: T): Option<T> = Some(t)
}
class Main {
  function main(): unit = {
    val a = Option.none();
  }
}
